[gd_scene load_steps=12 format=3 uid="uid://cnm1mvnfrbd5t"]

[ext_resource type="Theme" uid="uid://l78c22phb3jp" path="res://Scenes/Particles/Default.tres" id="1_sclwj"]
[ext_resource type="Script" path="res://settings.gd" id="2_yh8vl"]
[ext_resource type="PackedScene" uid="uid://kgnxo0qthuw0" path="res://Scenes/Particles/meteorite main  menu.tscn" id="3_mqw3e"]
[ext_resource type="Texture2D" uid="uid://wqmheqbtdhqr" path="res://Assets/UIAssets/SAPCE.webp" id="4_5egsi"]
[ext_resource type="PackedScene" uid="uid://ehgrixoqenig" path="res://Scenes/Particles/stars.tscn" id="5_6y5lm"]
[ext_resource type="Texture2D" uid="uid://bqos7qog2g1dg" path="res://Assets/UIAssets/Grabber.png" id="5_r1l0b"]
[ext_resource type="Texture2D" uid="uid://nrwetwm52j5b" path="res://Assets/UIAssets/backarrow.png" id="6_b357q"]
[ext_resource type="Texture2D" uid="uid://p1w4x3t8jkac" path="res://Assets/UIAssets/backarrowpressed.png" id="6_osnig"]
[ext_resource type="Texture2D" uid="uid://j5vsrq4xwgd7" path="res://Assets/UIAssets/HotbarBox.png" id="6_x5vx2"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_db1gw"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 6.0
texture = ExtResource("6_x5vx2")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0
region_rect = Rect2(2, 2, 34, 34)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_28lma"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.03, 2.03)
script = ExtResource("2_yh8vl")

[node name="Meteorite" parent="." instance=ExtResource("3_mqw3e")]
position = Vector2(-7.38919, -67.9803)

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -1
offset_left = -468.966
offset_top = -297.044
offset_right = 510.034
offset_bottom = 321.956
texture = ExtResource("4_5egsi")
stretch_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.5
offset_top = -33.0
offset_right = 42.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer"]
layout_mode = 2
theme = ExtResource("1_sclwj")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Master Volume"
horizontal_alignment = 1

[node name="Volume" type="HSlider" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_icons/grabber = ExtResource("5_r1l0b")
theme_override_icons/grabber_highlight = ExtResource("5_r1l0b")
theme_override_styles/slider = SubResource("StyleBoxTexture_db1gw")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_28lma")
max_value = 50.0

[node name="Mute" type="CheckBox" parent="CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Mute"

[node name="Stars" parent="." instance=ExtResource("5_6y5lm")]
position = Vector2(44.335, -20.197)
scale = Vector2(0.54, 0.54)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.074
offset_top = -98.5222
offset_right = -33.0739
offset_bottom = -58.5222
grow_horizontal = 2
grow_vertical = 2
rotation = 3.14074
scale = Vector2(1.31731, 1.87522)

[node name="TextureButton" type="TextureButton" parent="HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_b357q")
texture_hover = ExtResource("6_osnig")

[connection signal="value_changed" from="CenterContainer/MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="CenterContainer/MarginContainer/VBoxContainer/Mute" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="HBoxContainer/TextureButton" to="." method="_on_texture_button_pressed"]
